--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <article class="testimonial">
       <img src="images/image-daniel.jpg" alt="Daniel">
-      <p class="nameWhite">Daniel Clifford</p>
+      <p class="name n_White">Daniel Clifford</p>
       <p class ="textWhite">Verified Graduate</p>
       <h1 class="hWhite">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h1>
       <p class="textWhite">
@@ -29,7 +29,7 @@
     </article>
     <article class="testimonial">
       <img src="images/image-jonathan.jpg" alt="Jonathan">
-      <p class="nameWhite">Jonathan Walters</p>
+      <p class="name n_White">Jonathan Walters</p>
       <p class="textWhite">Verified Graduate</p>
       <h1 class="hWhite">The team was very supportive and kept me motivated</h1>
       <p class="textWhite">
@@ -39,7 +39,7 @@
     </article>
     <article class="testimonial">
       <img src="images/image-jeanette.jpg" alt="Jeanette">
-      <p class="nameBlue">Jeanette Harmon</p>
+      <p class="name n_Blue">Jeanette Harmon</p>
       <p class="textBlue">Verified Graduate</p>
       <h1 class="hBlue">An overall wonderful and rewarding experience</h1>
       <p class="textBlue">
@@ -49,7 +49,7 @@
     </article>
     <article class="testimonial">
       <img src="images/image-patrick.jpg" alt="Patrick">
-      <p class="nameWhite">Patrick Abrams</p>
+      <p class="name n_White">Patrick Abrams</p>
       <p class="textWhite">Verified Graduate</p>
       <h1 class="hWhite">
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
@@ -64,7 +64,7 @@
     </article>
     <article class="testimonial">
       <img src="images/image-kira.jpg" alt="Kira">
-      <p class="nameBlue">Kira Whittle</p>
+      <p class="name n_Blue">Kira Whittle</p>
       <p class="textBlue">Verified Graduate</p>
       <h1 class="hBlue">Such a life-changing experience. Highly recommended!</h1>
       <p class="textBlue">
