--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
   <main>
     <article class="testimonial">
-      <img src="images/image-daniel.jpg" alt="Daniel">
-      <p class="name n_White">Daniel Clifford</p>
-      <p class ="textWhite">Verified Graduate</p>
-      <h1 class="hWhite">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h1>
-      <p class="textWhite">
+      <div class="profile">
+        <img src="images/image-daniel.jpg" alt="Daniel">
+        <p class="name white">Daniel Clifford</p>
+        <p class ="desc white">Verified Graduate</p>
+      </div>
+      <h2 class="white">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h2>
+      <p class="review white">
         “I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
         transition and have heard some people who had an amazing experience here. I signed up
         for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
@@ -28,34 +30,40 @@
       </p>
     </article>
     <article class="testimonial">
-      <img src="images/image-jonathan.jpg" alt="Jonathan">
-      <p class="name n_White">Jonathan Walters</p>
-      <p class="textWhite">Verified Graduate</p>
-      <h1 class="hWhite">The team was very supportive and kept me motivated</h1>
-      <p class="textWhite">
+      <div class="profile">
+        <img src="images/image-jonathan.jpg" alt="Jonathan">
+        <p class="name white">Jonathan Walters</p>
+        <p class="desc white">Verified Graduate</p>
+      </div>
+      <h2 class="white">The team was very supportive and kept me motivated</h2>
+      <p class="review white">
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
         for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
     </article>
     <article class="testimonial">
-      <img src="images/image-jeanette.jpg" alt="Jeanette">
-      <p class="name n_Blue">Jeanette Harmon</p>
-      <p class="textBlue">Verified Graduate</p>
-      <h1 class="hBlue">An overall wonderful and rewarding experience</h1>
-      <p class="textBlue">
+      <div class="profile">
+        <img src="images/image-jeanette.jpg" alt="Jeanette">
+        <p class="name blue">Jeanette Harmon</p>
+        <p class="desc blue">Verified Graduate</p>
+      </div>
+      <h2 class="blue">An overall wonderful and rewarding experience</h2>
+      <p class="review blue">
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
         while doing something I love. ”
       </p>
     </article>
     <article class="testimonial">
-      <img src="images/image-patrick.jpg" alt="Patrick">
-      <p class="name n_White">Patrick Abrams</p>
-      <p class="textWhite">Verified Graduate</p>
-      <h1 class="hWhite">
+      <div class="profile">
+        <img src="images/image-patrick.jpg" alt="Patrick">
+        <p class="name white">Patrick Abrams</p>
+        <p class="desc white">Verified Graduate</p>
+      </div>
+      <h2 class="white">
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
         learning from their experiences was easy.
-      </h1>
-      <p class="textWhite">
+      </h2>
+      <p class="review white">
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
         gave me the confidence necessary to be able to go out in the world and present myself as a capable
         junior developer. The standard is above the rest. You will get the personal attention you need from
@@ -63,11 +71,13 @@
       </p>
     </article>
     <article class="testimonial">
-      <img src="images/image-kira.jpg" alt="Kira">
-      <p class="name n_Blue">Kira Whittle</p>
-      <p class="textBlue">Verified Graduate</p>
-      <h1 class="hBlue">Such a life-changing experience. Highly recommended!</h1>
-      <p class="textBlue">
+      <div class="profile">
+        <img src="images/image-kira.jpg" alt="Kira">
+        <p class="name blue">Kira Whittle</p>
+        <p class="desc blue">Verified Graduate</p>
+      </div>
+      <h2 class="blue">Such a life-changing experience. Highly recommended!</h2>
+      <p class="review blue">
         “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
         professionals who can help me learn programming step by step. I was encouraged to enroll by a former
         student of theirs who can only say wonderful things about the program. The entire curriculum and staff
