--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media-query.css">
 </head>
 
 <body>
